# hallachatbot

./: mongodbConnect.py  pyproject.toml  requirements.txt  test.py  test_stream_chat.py
ai/: __init__.py
ai/chatbot/: __init__.py  metadata.py  stream.py
ai/functions/: analyzer.py
ai/rag/: gate.py  service.py
api/: routes.py
chatbot/: chatbot.py  common.py  functioncalling.py
chatbotDirectory/: character.py  chatbot.py  common.py  functioncalling.py
chatbotDirectory/rag/: __init__.py  context_builder.py  gate.py  repository.py  retriever.py
docs/: RAG_분리_계획.md  README.md  admin_rag_monitoring_plan.md  기능_목록.md  데이터_흐름도.md  패키지_구조_및_Init_관리_가이드.md  프로젝트_구조.md  프론트엔드_API_통합_가이드.md  프론트엔드_스트리밍_가이드.md  핵심_클래스_함수.md
docs/챗봇로직_분리과정/: Phase2_3_최종_보고서.md  Phase3_1_Routes_분석.md  Phase3_Routes_리팩토링_계획.md  Phase3_완료_보고서.md  챗봇_로직_분리_계획.md
loding/: documentLoding.py  mongodbConnect.py  vector_db_upload.py
test/: __init__.py  test.py
tests/: test_stream_chat.py
